--- a/main.css
+++ b/main.css
@@ -9,7 +9,10 @@ label {
 body {
   background: linear-gradient(to bottom right, #ff7373, #72c4f4);
 }
-
+.invisible {
+  opacity: 0;
+  visibility: hidden;
+}
 
 
 
@@ -20,22 +23,18 @@ body {
   height: 100vh;
 }
 
-#interval {
-  top: 40%;
-  width: 100%;
-  height: 20%;
-}
-#timespan {
-  top: 0;
-  left: 25%;
-}
 #beginBtn {
   top: 0;
   right: 25%;
 }
 #beginBtn:hover {
-  background: white;
+  background: blue;
 }
+
+#beginBtn.disabled {
+  opacity: 0;
+}
+
 #dismiss-counter {
   width: 100%;
   height: 30%;
@@ -66,4 +65,5 @@ body {
 #autodismiss {
   width: 100%;
   height: 30%;
-  top: 
+}
+
